# ai_polling

./: .env  .gitignore  PIPELINE_RESULTS.md  README.md  ai_polling.Rproj  claude.md  config.yaml  create_stakeholder_list.R  pyproject.toml  test_simple_extinction.html  upload_simple.R  upload_to_sheets.R  visualize_grouped_polling_backup.R  visualize_grouped_polling_fixed.R  visualize_grouped_simple.R
ai_polling/: __init__.py  __main__.py  cli.py
ai_polling.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
archive/: audit_checklist.md  audit_tools.py  quality_summary.py  sample_poll_metadata.csv  test_api.R  test_api.py  upload_to_sheets.py
extracted_data/: 3m_sep_2021_data.rds  ada_lovelace_2024_data.rds  ada_lovelace_oct_2024_data.rds  ai_impacts_oct_2023_data.rds  aipi_aug_2024_data.rds  aipi_jun_2024_data.rds  aipi_nov_2024_data.rds  all_polling_data.csv  all_polling_data.rds  all_polling_data_corrected.rds  cleaned_polling_data.csv  cleaned_polling_data.rds  combined_polling_data.rds  comprehensive_polling_data.csv  comprehensive_polling_data.json  current_pdf_latest.json  current_pdf_results_20250704_165608.csv  enhanced_polling_data.csv  enhanced_polling_data.json  existing_for_python.csv  expanded_polling_data.csv  expanded_polling_data.rds  gallup_apr_2024_data.rds  harris_nov_2022_data.rds  ipsos_mar_2024_data.rds  ipsos_may_2023_us_data.rds  load_polling_data.R  pdf_extracted_partial.csv  pdf_extracted_partial.json  polling_data_20250706_204830.csv  polling_data_20250706_204830.json  polling_data_20250706_204830.rds  polling_data_20250706_212927.csv  polling_data_20250706_212927.json  polling_data_20250706_212927.rds  polling_data_20250706_214603.csv  polling_data_20250706_214603.json  polling_data_20250706_214603.rds  polling_data_20250706_214837.csv  (+29 more)
(+135 files in other folders)
